fix: tests + coverage, refactoring, collection naming, openapi, put/patch api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,11 @@ docs.info.contact.name=Mario Rossi
 docs.info.contact.mail=mariorossi@ibm.com
 docs.info.contact.url=www.example.com
 docs.info.termsOfService=www.terms.com
+docs.info.api-id=1
+docs.info.summary=Syntax rules manager
+docs.info.title=Syntax rules manager
+docs.info.description=Syntax rules manager
+validation.file-max-size=1000
 
 ####### LOGGING OUTPUT FORMAT ############
 # Must be one of console, json
