feat(properties): gitignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 /target/
-.settings/org.eclipse.m2e.core.prefs
-.settings/org.eclipse.jdt.core.prefs
-.settings/org.eclipse.core.resources.prefs
+.settings/*
 .project
 .classpath
 *.iml
@@ -14,3 +12,5 @@ bin/
 .metadata
 tmp/
 .idea
+.vscode/
+.DS_Store
