feat: Change entity name for unique db

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,5 +4,5 @@ management.server.port=9100
 #######################################
 #	Database
 #######################################
-data.mongodb.uri=mongodb://mongoadmin:secret@localhost:27888/eds
+data.mongodb.uri=mongodb://mongoadmin:secret@localhost:27888/fse
 logging.level.web=DEBUG
