--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,18 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongodb-driver-sync</artifactId>
+			<version>4.8.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongodb-driver-core</artifactId>
+			<version>4.8.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>bson</artifactId>
+			<version>4.8.2</version>
+		</dependency> 
 		<!-- DEVTOOL -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
