--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,4 @@ log.output.format=console
 #			DATASOURCE DB
 #######################################
 data.mongodb.uri=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@<mondodb_hostname>:<mondodb_port>/<mondodb_dbname>
+data.mongodb.schema-name=${MONGO_DBNAME}
