--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,4 +2,6 @@
 #	Database
 #######################################
 data.mongodb.uri=mongodb://mongoadmin:secret@localhost:27888/eds
+data.mongodb.schema-name=FSE_EDS
+
 logging.level.web=DEBUG
