fix: missing db_name props

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -5,4 +5,6 @@ management.server.port=9100
 #	Database
 #######################################
 data.mongodb.uri=mongodb://mongoadmin:secret@host.docker.internal:27888/fse
+data.mongodb.schema-name=FSE_EDS
+
 logging.level.web=DEBUG
