--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -4,5 +4,7 @@ management.server.port=9100
 #######################################
 #	Database
 #######################################
-data.mongodb.uri=mongodb://mongoadmin:secret@host.docker.internal:27888/fse
+data.mongodb.uri=mongodb://mongoadmin:secret@mongo:27017
+data.mongodb.schema-name=FSE_EDS
+
 logging.level.web=DEBUG
